--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.0",
     "react-select": "^5.7.0",
+    "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "zustand": "^4.3.2"
   },
