--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "framer-motion": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.0",
-    "react-query": "^3.39.3",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.0",
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
